src/test/ui/impl-trait/static-return-lifetime-infered.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/static-return-lifetime-infered.rs:17:9
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                         - let's call the lifetime of this reference `'1`
LL |         self.x.iter().map(|a| a.0)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'1` must outlive `'static`
help: to allow this impl Trait to capture borrowed data with lifetime `'1`, add `'_` as a constraint
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> + '_ {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unsatisfied lifetime constraints
  --> $DIR/static-return-lifetime-infered.rs:21:9
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                    -- lifetime `'a` defined here
LL |         self.x.iter().map(|a| a.0)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ returning this value requires that `'a` must outlive `'static`
help: to allow this impl Trait to capture borrowed data with lifetime `'a`, add `'a` as a constraint
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> + 'a {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

